--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0",
-    "styled-components": "^6.1.10"
+    "styled-components": "^6.1.10",
+    "swiper": "9.4.1"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
