--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "customize-cra": "1.0.0",
     "react": "^18.0.0",
+    "react-app-rewired": "2.1.8",
     "react-dom": "^18.0.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.0",
